assets/src/scss/pages/_listing-page.scss
@mixin render-bullet($spacing: $sp-1) {
  &:before {
    display: block;
    margin: 0 $spacing;
    color: inherit;
    content: "•";
  }
}

.query-list-item {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-top: var(--query-list--item--margin-top, $sp-4);

  @include medium-and-up {
    flex-direction: row;
  }
}

.query-list-item-image {
  flex-basis: 30%;

  &.query-list-item-image-max-width {
    img {
      width: 100%;
      height: 190px;
      object-fit: cover;
      object-position: 50% 50%;
      margin-right: $sp-2;

      html[dir="rtl"] & {
        margin-right: 0;
        margin-left: $sp-2;
      }

      @include medium-and-up {
        height: 200px;
      }

      @include large-and-up {
        height: 210px;
      }
    }
  }

  .wp-post-image {
    height: 100%;
  }
}

.query-list-item-body {
  flex-basis: 70%;
  flex-shrink: 0;
  margin-top: $sp-1;

  header {
    margin-top: $sp-1;
  }

  // Chrome and Safari
  // :has is not fully support for now.
  // https://developer.mozilla.org/en-US/docs/Web/CSS/:has
  &:has(.taxonomy-p4-page-type):has(.taxonomy-post_tag) {
    .wrapper-post-tag {
      display: flex;
      @include render-bullet;
    }
  }
}

.query-list-item-post-terms {
  display: flex;
  font-size: $font-size-sm;
  font-family: var(--headings--font-family);
  line-height: 25px;
  color: var(--top-page-tags--tag-item--color, var(--link--color));

  a {
    color: inherit;

    &:visited {
      color: var(--top-page-tags--tag-item--visited--color, var(--link--visited--color));
    }

    &:hover,
    &:active {
      color: var(--top-page-tags--tag-item--color, var(--link--hover--color));
    }
  }

  .wrapper-post-tag {
    a {
      display: inline-block;

      &:before {
        content: "#";
        speak-as: none;
      }
    }
  }

  .wp-block-post-terms {
    font-weight: 500;
  }

  .wp-block-post-terms__separator {
    visibility: hidden;
  }

  // Firefox
  .wrapper-post-term:not(:-moz-only-whitespace) {
    display: flex;

    & ~ .wrapper-post-tag:not(:-moz-only-whitespace) {
      display: flex;
      @include render-bullet;
    }
  }
}

.query-list-item-headline a,
.query-list-item-content p {
  display: -webkit-box !important;
  overflow: hidden;
  -webkit-box-orient: vertical;
}

.query-list-item-content p {
  font-size: $font-size-sm;
  margin-bottom: $sp-1;
  line-height: 25px;
  -webkit-line-clamp: 3;

  @include medium-and-up {
    -webkit-line-clamp: 2;
  }

  @include large-and-up {
    -webkit-line-clamp: 3;
  }
}

.query-list-item-headline {
  font-size: $font-size-lg !important;
  font-weight: var(--query-list-item-headline--font-weight, bold) !important;

  a {
    -webkit-line-clamp: 6;

    @include medium-and-up {
      -webkit-line-clamp: 2;
    }
  }
}

.query-list-item-meta {
  font-family: var(--headings--font-family);
  font-size: $font-size-xxs;
  color: $grey-40;
  line-height: 22px;

  .query-list-item-bullet {
    display: inline-block;
    padding: 0 $sp-x;
  }

  .article-list-item-author a {
    color: $grey-40;
  }

  .article-list-item-readtime {
    display: flex;
    @include render-bullet(4px);
  }
}

.wp-block-post {
  margin-bottom: $sp-4;

  figure {
    margin-bottom: 0;
  }
}

.wp-block-query-pagination:last-child {
  margin-top: $sp-6;
}

.wp-block-query {
  &.wp-block-query--list {
    .query-list-item-body {
      @include medium-and-up {
        padding: 0 0 0 $sp-2x;
      }
    }
  }

  &:not(.wp-block-query--list) {
    // Only applied to "grid" layout
    .wp-block-post-template {
      li {
        @include small-and-up {
          width: calc((100% / 2) - 1.25em + (1.25em / 2)) !important;
        }

        @include large-and-up {
          width: calc((100% / 3) - 1.25em + (1.25em / 3)) !important;
        }

        @include x-large-and-up {
          width: calc((100% / 4) - 1.25em + (1.25em / 4)) !important;
        }
      }
    }

    .query-list-item-meta {
      @include small-and-up {
        .article-list-item-author a {
          overflow: hidden;
          max-width: 100px;
          text-overflow: ellipsis;
          white-space: nowrap;
          display: inline-block;
        }
      }
    }
  }
}

.wp-block-query-pagination {
  a,
  .page-numbers {
    color: $black;
    padding: $sp-1 $sp-1x;
    user-select: none;
    border: 1px solid transparent;
    border-radius: 4px;
    font-weight: 500;
  }

  a {
    &:hover {
      text-decoration: none;
      background-color: $grey-10;
      transition-property: background-color, border-color;
      transition-duration: 250ms;
      transition-timing-function: linear;
    }
  }

  font-family: var(--headings--font-family);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  margin-bottom: $sp-6;

  @include large-and-up {
    justify-content: center;
  }
}

.wp-block-query-pagination-previous,
.wp-block-query-pagination-next {
  margin: 0 !important;

  &.disabled {
    pointer-events: none;
    opacity: .5;
  }
}

.wp-block-query-pagination-previous:before,
.wp-block-query-pagination-next:after {
  content: "";
  height: 12px;
  width: 8px;
  display: inline-block;
  mask-image: url("../../images/chevron.svg");
  mask-repeat: no-repeat;
  mask-size: contain;
  mask-position: center;
  background-repeat: no-repeat;
  background-color: currentColor;
  color: $black;
}

.wp-block-query-pagination-previous {
  &:before {
    margin-inline-end: 6px;
    transform: rotate(-180deg);

    html[dir="rtl"] & {
      transform: rotate(0);
    }
  }
}

.wp-block-query-pagination-next {
  &:after {
    margin-inline-start: 6px;

    html[dir="rtl"] & {
      transform: rotate(-180deg);
    }
  }
}

.wp-block-query-pagination-numbers {
  margin: 0 !important;

  .page-numbers.current {
    border-color: $black;
  }

  @include large-and-up {
    margin: 0 $sp-5 0 !important;
  }
}

